[gd_scene load_steps=14 format=3 uid="uid://cbwtr0wmttotn"]

[ext_resource type="Script" uid="uid://dl88nn61xd6cj" path="res://assets/scripts/Main.gd" id="1_npkpr"]
[ext_resource type="PackedScene" uid="uid://ng8c7l524kn7" path="res://assets/scenes/Button.tscn" id="2_eruk6"]
[ext_resource type="Theme" uid="uid://d0ku8sc22vh5l" path="res://assets/others/ui.tres" id="2_xt100"]
[ext_resource type="PackedScene" uid="uid://blhbho40h5585" path="res://assets/scenes/audio_stream_player.tscn" id="3_jv468"]
[ext_resource type="Texture2D" uid="uid://726loubhf0xr" path="res://assets/icons/both.svg" id="4_3qypx"]
[ext_resource type="Texture2D" uid="uid://cxfpr724yhw02" path="res://assets/icons/square.svg" id="5_ajan2"]
[ext_resource type="Texture2D" uid="uid://c715t8qjwxacl" path="res://assets/icons/circle.svg" id="6_cb1w8"]
[ext_resource type="Script" uid="uid://b2sd7bev83ssl" path="res://assets/scripts/oscilloscope.gd" id="8_ajan2"]
[ext_resource type="Texture2D" uid="uid://bhoj6bnrhgqyl" path="res://assets/icons/template.svg" id="8_cb1w8"]
[ext_resource type="Script" uid="uid://drc13lsqramsr" path="res://assets/scripts/ui_button.gd" id="9_ittna"]
[ext_resource type="Shader" uid="uid://dqowy258xptdg" path="res://assets/scenes/brightness.gdshader" id="10_cfala"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cb1w8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0tkjb"]
shader = ExtResource("10_cfala")
shader_parameter/alpha_multiplier = 2.000000095

[node name="Main" type="CanvasLayer" node_paths=PackedStringArray("grid", "octave_number", "columns_text", "rows_text", "semitone_text", "scale_selector", "slider", "center", "top", "bottom", "left", "right", "color_picker", "graphs")]
script = ExtResource("1_npkpr")
grid = NodePath("center/CenterContainer/GridContainer")
octave_number = NodePath("right/octave_changer/octave")
columns_text = NodePath("right/columns/octave")
rows_text = NodePath("right/rows/octave")
semitone_text = NodePath("right/semitone_changer/octave")
scale_selector = NodePath("right/scale_selector")
slider = NodePath("left/pitch_bend")
button_scene = ExtResource("2_eruk6")
stream_player = ExtResource("3_jv468")
button_icons = Array[CompressedTexture2D]([ExtResource("4_3qypx"), ExtResource("5_ajan2"), ExtResource("6_cb1w8"), ExtResource("5_ajan2"), ExtResource("6_cb1w8"), ExtResource("5_ajan2"), ExtResource("6_cb1w8")])
ui_theme = ExtResource("2_xt100")
center = NodePath("center")
top = NodePath("top")
bottom = NodePath("bottom")
left = NodePath("left")
right = NodePath("right")
color_picker = NodePath("color_picker")
graphs = NodePath("graphs")

[node name="center" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="center"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="center/CenterContainer"]
layout_mode = 2

[node name="top" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = -72.0
offset_bottom = -72.0
grow_horizontal = 2

[node name="osc_ip" type="LineEdit" parent="top"]
layout_mode = 0
offset_left = -320.0
offset_right = -208.0
offset_bottom = 31.0
placeholder_text = "IP"

[node name="osc_port" type="LineEdit" parent="top"]
layout_mode = 0
offset_left = -320.0
offset_top = 40.0
offset_right = -208.0
offset_bottom = 71.0
placeholder_text = "Port"

[node name="Button" type="Button" parent="top"]
layout_mode = 0
offset_left = -192.0
offset_top = 24.0
offset_right = -122.0
offset_bottom = 55.0
text = "connect"

[node name="sound" type="CheckButton" parent="top"]
layout_mode = 0
offset_left = -88.0
offset_right = 22.0
offset_bottom = 31.0
button_pressed = true
text = "sound"

[node name="bottom" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("9_ittna")

[node name="settings" type="CheckBox" parent="bottom"]
layout_mode = 0
offset_left = -264.0
offset_top = -80.0
offset_right = -192.0
offset_bottom = -8.0
pivot_offset = Vector2(36, 36)
theme_override_styles/focus = SubResource("StyleBoxEmpty_cb1w8")
theme_override_icons/checked = ExtResource("8_cb1w8")
theme_override_icons/unchecked = ExtResource("8_cb1w8")
flat = true
icon_alignment = 1

[node name="Panel" type="Panel" parent="bottom"]
show_behind_parent = true
material = SubResource("ShaderMaterial_0tkjb")
layout_mode = 0
offset_left = -264.0
offset_top = -80.0
offset_right = -192.0
offset_bottom = -8.0
mouse_filter = 2
theme = ExtResource("2_xt100")

[node name="control" type="Control" parent="bottom"]
clip_children = 2
clip_contents = true
anchors_preset = 0
offset_left = -192.0
offset_top = -80.0
offset_right = 448.0

[node name="CheckBox" type="CheckBox" parent="bottom/control"]
z_index = -1
layout_mode = 0
offset_left = -72.0
offset_top = 8.0
offset_right = 5.0
offset_bottom = 66.0
mouse_filter = 2
theme = ExtResource("2_xt100")
text = "üéπ"

[node name="CheckBox2" type="CheckBox" parent="bottom/control"]
z_index = -1
layout_mode = 0
offset_left = -72.0
offset_top = 8.0
offset_right = 5.0
offset_bottom = 66.0
mouse_filter = 2
theme = ExtResource("2_xt100")
text = "üéõÔ∏è"

[node name="CheckBox3" type="CheckBox" parent="bottom/control"]
z_index = -1
layout_mode = 0
offset_left = -72.0
offset_top = 8.0
offset_right = 5.0
offset_bottom = 66.0
mouse_filter = 2
theme = ExtResource("2_xt100")
text = "üõú"

[node name="CheckBox5" type="CheckBox" parent="bottom/control"]
z_index = -1
layout_mode = 0
offset_left = -72.0
offset_top = 8.0
offset_right = 5.0
offset_bottom = 66.0
mouse_filter = 2
theme = ExtResource("2_xt100")
text = "üìà"

[node name="CheckBox4" type="CheckBox" parent="bottom/control"]
z_index = -1
layout_mode = 0
offset_left = -72.0
offset_top = 8.0
offset_right = 5.0
offset_bottom = 66.0
mouse_filter = 2
theme = ExtResource("2_xt100")
text = "üåà"

[node name="left" type="Control" parent="."]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -144.0
offset_right = -144.0
grow_vertical = 2

[node name="Button" type="CheckButton" parent="left"]
layout_mode = 0
offset_left = 8.0
offset_top = 72.0
offset_right = 120.0
offset_bottom = 128.0
text = "Latch"

[node name="Label" type="Label" parent="left"]
layout_mode = 0
offset_top = 128.0
offset_right = 128.0
offset_bottom = 163.0
theme = ExtResource("2_xt100")
theme_override_font_sizes/font_size = 25
text = "Pitch bend"

[node name="pitch_bend" type="VSlider" parent="left"]
layout_mode = 0
offset_top = 184.0
offset_right = 128.0
offset_bottom = 472.0
mouse_filter = 1
theme = ExtResource("2_xt100")
max_value = 16383.0
value = 8192.0

[node name="right" type="Control" parent="."]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="scale_selector" type="OptionButton" parent="right"]
layout_mode = 0
offset_left = 16.0
offset_right = 208.0
offset_bottom = 31.0
alignment = 1

[node name="CheckButton" type="CheckButton" parent="right"]
layout_mode = 0
offset_left = 8.0
offset_top = 32.0
offset_right = 214.0
offset_bottom = 90.0
theme = ExtResource("2_xt100")
text = "sustain"

[node name="octave_changer" type="Control" parent="right"]
anchors_preset = 0
offset_left = 112.0
offset_top = 96.0
offset_right = 152.0
offset_bottom = 136.0

[node name="Label" type="Label" parent="right/octave_changer"]
layout_mode = 0
offset_left = -32.0
offset_right = 83.0
offset_bottom = 50.0
theme = ExtResource("2_xt100")
text = "octave"

[node name="octave" type="Label" parent="right/octave_changer"]
layout_mode = 0
offset_left = -11.000006
offset_top = 50.31534
offset_right = 44.999992
offset_bottom = 100.31534
theme = ExtResource("2_xt100")
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="plus" type="Button" parent="right/octave_changer"]
layout_mode = 0
offset_left = 68.99999
offset_top = 106.31534
offset_right = 98.0
offset_bottom = 164.31534
rotation = -9.424778
scale = Vector2(1.0143571, 1.005437)
theme = ExtResource("2_xt100")
text = "<"

[node name="minus" type="Button" parent="right/octave_changer"]
layout_mode = 0
offset_left = -3.0000057
offset_top = 106.31534
offset_right = 25.999994
offset_bottom = 164.31534
rotation = -3.1415927
theme = ExtResource("2_xt100")
text = ">"

[node name="semitone_changer" type="Control" parent="right"]
anchors_preset = 0
offset_left = 112.0
offset_top = 216.0
offset_right = 152.0
offset_bottom = 256.0

[node name="Label" type="Label" parent="right/semitone_changer"]
layout_mode = 0
offset_left = -64.0
offset_top = -8.0
offset_right = 98.0
offset_bottom = 42.0
theme = ExtResource("2_xt100")
text = "semitone"
horizontal_alignment = 2

[node name="octave" type="Label" parent="right/semitone_changer"]
layout_mode = 0
offset_left = -11.000006
offset_top = 50.31534
offset_right = 44.999992
offset_bottom = 153.31534
theme = ExtResource("2_xt100")
text = "0
"
horizontal_alignment = 1

[node name="plus1" type="Button" parent="right/semitone_changer"]
layout_mode = 0
offset_left = 68.99999
offset_top = 106.31534
offset_right = 98.0
offset_bottom = 164.31534
rotation = -9.424778
scale = Vector2(1.0143571, 1.005437)
theme = ExtResource("2_xt100")
text = "<"

[node name="minus2" type="Button" parent="right/semitone_changer"]
layout_mode = 0
offset_left = -3.0000057
offset_top = 106.31534
offset_right = 25.999994
offset_bottom = 164.31534
rotation = -3.1415927
theme = ExtResource("2_xt100")
text = ">"

[node name="columns" type="Control" parent="right"]
anchors_preset = 0
offset_left = 112.0
offset_top = 408.0
offset_right = 152.0
offset_bottom = 448.0

[node name="Label" type="Label" parent="right/columns"]
layout_mode = 0
offset_left = -64.0
offset_top = -72.0
offset_right = 98.0
offset_bottom = -22.0
theme = ExtResource("2_xt100")
text = "collumns"
horizontal_alignment = 1

[node name="octave" type="Label" parent="right/columns"]
layout_mode = 0
offset_left = -11.000006
offset_top = -13.684662
offset_right = 44.999992
offset_bottom = 36.31534
theme = ExtResource("2_xt100")
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="colump" type="Button" parent="right/columns"]
layout_mode = 0
offset_left = 68.99999
offset_top = 42.31534
offset_right = 98.0
offset_bottom = 100.31534
rotation = -9.424778
scale = Vector2(1.0143571, 1.005437)
theme = ExtResource("2_xt100")
text = "<"

[node name="columm" type="Button" parent="right/columns"]
layout_mode = 0
offset_left = -3.0000057
offset_top = 42.31534
offset_right = 25.999994
offset_bottom = 100.31534
rotation = -3.1415927
theme = ExtResource("2_xt100")
text = ">"

[node name="rows" type="Control" parent="right"]
anchors_preset = 0
offset_left = 112.0
offset_top = 472.0
offset_right = 152.0
offset_bottom = 512.0

[node name="Label" type="Label" parent="right/rows"]
layout_mode = 0
offset_left = -64.0
offset_top = -16.0
offset_right = 98.0
offset_bottom = 34.0
theme = ExtResource("2_xt100")
text = "rows"
horizontal_alignment = 1

[node name="octave" type="Label" parent="right/rows"]
layout_mode = 0
offset_left = -11.000006
offset_top = 42.31534
offset_right = 44.999992
offset_bottom = 92.31534
theme = ExtResource("2_xt100")
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="rowp" type="Button" parent="right/rows"]
layout_mode = 0
offset_left = 68.99999
offset_top = 98.31534
offset_right = 98.0
offset_bottom = 156.31534
rotation = -9.424778
scale = Vector2(1.0143571, 1.005437)
theme = ExtResource("2_xt100")
text = "<"

[node name="rowm" type="Button" parent="right/rows"]
layout_mode = 0
offset_left = -3.0000057
offset_top = 98.31534
offset_right = 25.999994
offset_bottom = 156.31534
rotation = -3.1415927
theme = ExtResource("2_xt100")
text = ">"

[node name="color_picker" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="color_picker"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = 324.0
offset_right = 176.0
offset_bottom = 956.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(172, 0)
theme = ExtResource("2_xt100")

[node name="ColorPicker" type="ColorPicker" parent="color_picker/Panel"]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 322.0
offset_bottom = 620.0
alignment = 1
picker_shape = 2
sampler_visible = false
color_modes_visible = false
presets_visible = false

[node name="0" parent="color_picker" instance=ExtResource("2_eruk6")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 296.0
offset_top = 572.0
offset_right = 296.0
offset_bottom = 572.0
grow_horizontal = 2
grow_vertical = 2

[node name="graphs" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="graph" type="Panel" parent="graphs"]
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 248.0
offset_bottom = 152.0

[node name="Line2D" type="Line2D" parent="graphs/graph"]
position = Vector2(0, 56)
scale = Vector2(0.3, 0.3)
joint_mode = 2
antialiased = true
script = ExtResource("8_ajan2")
x_scale = 3.0

[connection signal="text_changed" from="top/osc_ip" to="." method="_on_osc_ip_text_changed"]
[connection signal="text_changed" from="top/osc_port" to="." method="_on_osc_port_text_changed"]
[connection signal="pressed" from="top/Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="top/sound" to="." method="_on_sound_toggled"]
[connection signal="toggled" from="bottom/settings" to="bottom" method="_on_settings_toggled"]
[connection signal="toggled" from="bottom/control/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="toggled" from="bottom/control/CheckBox2" to="." method="_on_check_box_2_toggled"]
[connection signal="toggled" from="bottom/control/CheckBox3" to="." method="_on_check_box_3_toggled"]
[connection signal="toggled" from="bottom/control/CheckBox5" to="." method="_on_check_box_5_toggled"]
[connection signal="toggled" from="bottom/control/CheckBox4" to="." method="_on_check_box_4_toggled"]
[connection signal="toggled" from="left/Button" to="." method="_on_button_toggled"]
[connection signal="drag_ended" from="left/pitch_bend" to="." method="_on_v_slider_drag_ended"]
[connection signal="value_changed" from="left/pitch_bend" to="." method="_on_pitch_bend_value_changed"]
[connection signal="item_selected" from="right/scale_selector" to="." method="_on_scale_selector_item_selected"]
[connection signal="toggled" from="right/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="right/octave_changer/plus" to="." method="_on_plus_pressed"]
[connection signal="pressed" from="right/octave_changer/minus" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="right/semitone_changer/plus1" to="." method="_on_plus_1_pressed"]
[connection signal="pressed" from="right/semitone_changer/minus2" to="." method="_on_minus_2_pressed"]
[connection signal="pressed" from="right/columns/colump" to="." method="_on_colump_pressed"]
[connection signal="pressed" from="right/columns/columm" to="." method="_on_columm_pressed"]
[connection signal="pressed" from="right/rows/rowp" to="." method="_on_rowp_pressed"]
[connection signal="pressed" from="right/rows/rowm" to="." method="_on_rowm_pressed"]
[connection signal="color_changed" from="color_picker/Panel/ColorPicker" to="." method="_on_color_picker_color_changed"]
